add action details on long press closes #7

--- a/app/src/main/res/layout/combat.xml
+++ b/app/src/main/res/layout/combat.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout">
 
     <!--<data>-->
-        <!--<variable name="player" type="industries.goodteam.gambit.actor.Actor" />-->
-        <!--<variable name="enemy" type="industries.goodteam.gambit.actor.Actor" />-->
+    <!--<variable name="player" type="industries.goodteam.gambit.actor.Actor" />-->
+    <!--<variable name="enemy" type="industries.goodteam.gambit.actor.Actor" />-->
     <!--</data>-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -371,5 +371,50 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/enemyHealthBar" />
+
+        <LinearLayout
+            android:id="@+id/detailsCard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/border"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/playerDamage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/enemyHealthBar">
+
+            <TextView
+                android:id="@+id/detailsClose"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="X  "
+                android:textAlignment="viewEnd"
+                android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/detailsName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ACTION"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/detailsText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="*does a thing"
+                android:textSize="24sp" />
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
